@@ -55,7 +55,7 @@
 #define DEFAULT_SNAP_GRID_X               1
 #define DEFAULT_SNAP_GRID_Y               1
 
-#define DEFAULT_MOVE_SMOOTHNESS           10
+#define DEFAULT_MOVE_SMOOTHNESS           30
 
 /* Tunable parameters. */
 #define MAX_GRADIENT_SEGMENTS          1000
